fix contact section size on larger screen sizes . vh amended from 60vh to 40vh to remove white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,7 +279,7 @@ footer ul {
 
 .contact-section {
     width: 95vw;
-    height: 60vh;
+    height: 40vh;
     margin-left: 10%;
     
 }
